examples/test/testpolicy1543.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1543
  namespace: namespace118
spec:
  podSelector:
    matchLabels:
      key38: value38
      key40: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value39
      podSelector:
        matchLabels:
          key8: value33
          key47: value14
          key3: value16
